// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header - Snapshots > matches snapshot for HeaderContainer with default props 1`] = `
<header
  class="py-6 items-center px-6 sticky top-0 z-10 bg-gradient-to-b from-[var(--background)] to-[var(--transparent)] h-[96px] md:h-[144px]"
  data-size="container"
  data-testid="container"
>
  <nav
    class="flex-row items-center py-0 md:py-6 gap-6 w-full h-full"
    data-testid="container"
  >
    <div>
      Header content
    </div>
  </nav>
</header>
`;

exports[`Header - Snapshots > matches snapshots for ButtonSignIn with different configurations 1`] = `
<button
  data-testid="button-secondary"
  data-variant="secondary"
>
  <div
    class="mr-2 h-4 w-4"
    data-testid="login-icon"
  >
    LogIn
  </div>
  Sign in
</button>
`;

exports[`Header - Snapshots > matches snapshots for ButtonSignIn with different configurations 2`] = `
<button
  class="custom-signin"
  data-testid="button-secondary"
  data-variant="secondary"
>
  <div
    class="mr-2 h-4 w-4"
    data-testid="login-icon"
  >
    LogIn
  </div>
  Sign in
</button>
`;

exports[`Header - Snapshots > matches snapshots for HeaderTitle with different configurations 1`] = `
<div
  class="flex-1 hidden md:flex"
  data-testid="container"
>
  <div
    class="text-muted-foreground font-normal"
    data-size="lg"
    data-testid="heading-2"
  />
</div>
`;

exports[`Header - Snapshots > matches snapshots for HeaderTitle with different configurations 2`] = `
<div
  class="flex-1 hidden md:flex"
  data-testid="container"
>
  <div
    class="text-muted-foreground font-normal"
    data-size="lg"
    data-testid="heading-2"
  />
</div>
`;

exports[`Header - Snapshots > matches snapshots for HomeHeader with different configurations 1`] = `
<div
  class="flex-1 flex-row items-center justify-end"
  data-testid="container"
>
  <div
    data-testid="social-links"
  >
    Social Links
  </div>
  <div
    data-testid="button-sign-in"
  >
    Sign In Button
  </div>
</div>
`;

exports[`Header - Snapshots > matches snapshots for HomeHeader with different configurations 2`] = `
<div
  class="flex-1 flex-row items-center justify-end"
  data-testid="container"
>
  <div
    data-testid="social-links"
  >
    Social Links
  </div>
  <div
    data-testid="button-sign-in"
  >
    Sign In Button
  </div>
</div>
`;

exports[`Header - Snapshots > matches snapshots for NavigationButtons with different configurations 1`] = `
<div
  class="flex flex-row w-auto justify-start items-center gap-3"
  data-testid="container"
>
  <a
    data-testid="link"
    href="/feed"
  >
    <button
      class="w-12 h-12"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="home-icon"
      >
        Home
      </div>
    </button>
  </a>
  <a
    class="sm:hidden"
    data-testid="link"
    href="/search"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="search-icon"
      >
        Search
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/hot"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="flame-icon"
      >
        Flame
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/bookmarks"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="bookmark-icon"
      >
        Bookmark
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/settings"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="settings-icon"
      >
        Settings
      </div>
    </button>
  </a>
  <a
    class="relative"
    data-testid="link"
    href="/profile"
  >
    <div
      class="w-12 h-12"
      data-testid="avatar"
    >
      <img
        alt="avatar"
        data-testid="avatar-image"
      />
      <div
        data-testid="avatar-fallback"
      >
        SN
      </div>
    </div>
  </a>
</div>
`;

exports[`Header - Snapshots > matches snapshots for NavigationButtons with different configurations 2`] = `
<div
  class="flex flex-row w-auto justify-start items-center gap-3"
  data-testid="container"
>
  <a
    data-testid="link"
    href="/feed"
  >
    <button
      class="w-12 h-12"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="home-icon"
      >
        Home
      </div>
    </button>
  </a>
  <a
    class="sm:hidden"
    data-testid="link"
    href="/search"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="search-icon"
      >
        Search
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/hot"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="flame-icon"
      >
        Flame
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/bookmarks"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="bookmark-icon"
      >
        Bookmark
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/settings"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="settings-icon"
      >
        Settings
      </div>
    </button>
  </a>
  <a
    class="relative"
    data-testid="link"
    href="/profile"
  >
    <div
      class="w-12 h-12"
      data-testid="avatar"
    >
      <img
        alt="avatar"
        data-testid="avatar-image"
      />
      <div
        data-testid="avatar-fallback"
      >
        SN
      </div>
    </div>
    <div
      class="absolute bottom-0 right-0 rounded-full bg-brand h-5 w-5"
      data-testid="badge"
      data-variant="secondary"
    >
      <div
        class="text-primary-foreground "
        data-size="sm"
        data-testid="typography"
      >
        5
      </div>
    </div>
  </a>
</div>
`;

exports[`Header - Snapshots > matches snapshots for NavigationButtons with different configurations 3`] = `
<div
  class="flex flex-row w-auto justify-start items-center gap-3"
  data-testid="container"
>
  <a
    data-testid="link"
    href="/feed"
  >
    <button
      class="w-12 h-12"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="home-icon"
      >
        Home
      </div>
    </button>
  </a>
  <a
    class="sm:hidden"
    data-testid="link"
    href="/search"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="search-icon"
      >
        Search
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/hot"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="flame-icon"
      >
        Flame
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/bookmarks"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="bookmark-icon"
      >
        Bookmark
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/settings"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="settings-icon"
      >
        Settings
      </div>
    </button>
  </a>
  <a
    class="relative"
    data-testid="link"
    href="/profile"
  >
    <div
      class="w-12 h-12"
      data-testid="avatar"
    >
      <img
        alt="avatar"
        data-testid="avatar-image"
      />
      <div
        data-testid="avatar-fallback"
      >
        SN
      </div>
    </div>
  </a>
</div>
`;

exports[`Header - Snapshots > matches snapshots for NavigationButtons with different configurations 4`] = `
<div
  class="flex flex-row w-auto justify-start items-center gap-3"
  data-testid="container"
>
  <a
    data-testid="link"
    href="/feed"
  >
    <button
      class="w-12 h-12"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="home-icon"
      >
        Home
      </div>
    </button>
  </a>
  <a
    class="sm:hidden"
    data-testid="link"
    href="/search"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="search-icon"
      >
        Search
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/hot"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="flame-icon"
      >
        Flame
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/bookmarks"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="bookmark-icon"
      >
        Bookmark
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/settings"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="settings-icon"
      >
        Settings
      </div>
    </button>
  </a>
  <a
    class="relative"
    data-testid="link"
    href="/profile"
  >
    <div
      class="w-12 h-12"
      data-testid="avatar"
    >
      <img
        alt="avatar"
        data-testid="avatar-image"
      />
      <div
        data-testid="avatar-fallback"
      >
        SN
      </div>
    </div>
    <div
      class="absolute bottom-0 right-0 rounded-full bg-brand h-5 w-5"
      data-testid="badge"
      data-variant="secondary"
    >
      <div
        class="text-primary-foreground text-xs"
        data-size="sm"
        data-testid="typography"
      >
        21+
      </div>
    </div>
  </a>
</div>
`;

exports[`Header - Snapshots > matches snapshots for NavigationButtons with different configurations 5`] = `
<div
  class="flex flex-row w-auto justify-start items-center gap-3"
  data-testid="container"
>
  <a
    data-testid="link"
    href="/feed"
  >
    <button
      class="w-12 h-12"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="home-icon"
      >
        Home
      </div>
    </button>
  </a>
  <a
    class="sm:hidden"
    data-testid="link"
    href="/search"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="search-icon"
      >
        Search
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/hot"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="flame-icon"
      >
        Flame
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/bookmarks"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="bookmark-icon"
      >
        Bookmark
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/settings"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="settings-icon"
      >
        Settings
      </div>
    </button>
  </a>
  <a
    class="relative"
    data-testid="link"
    href="/profile"
  >
    <div
      class="w-12 h-12"
      data-testid="avatar"
    >
      <img
        alt="avatar"
        data-testid="avatar-image"
      />
      <div
        data-testid="avatar-fallback"
      >
        SN
      </div>
    </div>
  </a>
</div>
`;

exports[`Header - Snapshots > matches snapshots for NavigationButtons with different configurations 6`] = `
<div
  class="flex flex-row w-auto justify-start items-center gap-3"
  data-testid="container"
>
  <a
    data-testid="link"
    href="/feed"
  >
    <button
      class="w-12 h-12"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="home-icon"
      >
        Home
      </div>
    </button>
  </a>
  <a
    class="sm:hidden"
    data-testid="link"
    href="/search"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="search-icon"
      >
        Search
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/hot"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="flame-icon"
      >
        Flame
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/bookmarks"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="bookmark-icon"
      >
        Bookmark
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/settings"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="settings-icon"
      >
        Settings
      </div>
    </button>
  </a>
  <a
    class="relative"
    data-testid="link"
    href="/profile"
  >
    <div
      class="w-12 h-12"
      data-testid="avatar"
    >
      <img
        alt="avatar"
        data-testid="avatar-image"
      />
      <div
        data-testid="avatar-fallback"
      >
        SN
      </div>
    </div>
    <div
      class="absolute bottom-0 right-0 rounded-full bg-brand h-5 w-5"
      data-testid="badge"
      data-variant="secondary"
    >
      <div
        class="text-primary-foreground "
        data-size="sm"
        data-testid="typography"
      >
        15
      </div>
    </div>
  </a>
</div>
`;

exports[`Header - Snapshots > matches snapshots for NavigationButtons with different configurations 7`] = `
<div
  class="flex flex-row w-auto justify-start items-center gap-3"
  data-testid="container"
>
  <a
    data-testid="link"
    href="/feed"
  >
    <button
      class="w-12 h-12"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="home-icon"
      >
        Home
      </div>
    </button>
  </a>
  <a
    class="sm:hidden"
    data-testid="link"
    href="/search"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="search-icon"
      >
        Search
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/hot"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="flame-icon"
      >
        Flame
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/bookmarks"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="bookmark-icon"
      >
        Bookmark
      </div>
    </button>
  </a>
  <a
    data-testid="link"
    href="/settings"
  >
    <button
      class="w-12 h-12 border bg-transparent"
      data-size="icon"
      data-testid="button-secondary"
      data-variant="secondary"
    >
      <div
        class="size-6"
        data-testid="settings-icon"
      >
        Settings
      </div>
    </button>
  </a>
  <a
    class="relative"
    data-testid="link"
    href="/profile"
  >
    <div
      class="w-12 h-12"
      data-testid="avatar"
    >
      <img
        alt="avatar"
        data-testid="avatar-image"
      />
      <div
        data-testid="avatar-fallback"
      >
        SN
      </div>
    </div>
  </a>
</div>
`;

exports[`Header - Snapshots > matches snapshots for OnboardingHeader with different configurations 1`] = `
<div
  data-current="1"
  data-testid="progress-steps"
  data-total="5"
>
  Progress 
  1
  /
  5
</div>
`;

exports[`Header - Snapshots > matches snapshots for OnboardingHeader with different configurations 2`] = `
<div
  data-current="3"
  data-testid="progress-steps"
  data-total="5"
>
  Progress 
  3
  /
  5
</div>
`;

exports[`Header - Snapshots > matches snapshots for SocialLinks with different configurations 1`] = `
<div
  class="hidden md:flex flex-row justify-end gap-6 mr-6"
  data-testid="container"
>
  <a
    data-size="default"
    data-testid="link"
    data-variant="muted"
    href="https://github.com/pubky"
  >
    <div
      class="w-6 h-6"
      data-testid="github-icon"
    >
      Github
    </div>
  </a>
  <a
    data-size="default"
    data-testid="link"
    data-variant="muted"
    href="https://x.com/getpubky"
  >
    <div
      class="w-6 h-6"
      data-testid="xtwitter-icon"
    >
      XTwitter
    </div>
  </a>
  <a
    data-size="default"
    data-testid="link"
    data-variant="muted"
    href="https://t.me/pubky"
  >
    <div
      class="w-6 h-6"
      data-testid="telegram-icon"
    >
      Telegram
    </div>
  </a>
</div>
`;

exports[`Header - Snapshots > matches snapshots for SocialLinks with different configurations 2`] = `
<div
  class="hidden md:flex flex-row justify-end gap-6 mr-6 custom-social"
  data-testid="container"
>
  <a
    data-size="default"
    data-testid="link"
    data-variant="muted"
    href="https://github.com/pubky"
  >
    <div
      class="w-6 h-6"
      data-testid="github-icon"
    >
      Github
    </div>
  </a>
  <a
    data-size="default"
    data-testid="link"
    data-variant="muted"
    href="https://x.com/getpubky"
  >
    <div
      class="w-6 h-6"
      data-testid="xtwitter-icon"
    >
      XTwitter
    </div>
  </a>
  <a
    data-size="default"
    data-testid="link"
    data-variant="muted"
    href="https://t.me/pubky"
  >
    <div
      class="w-6 h-6"
      data-testid="telegram-icon"
    >
      Telegram
    </div>
  </a>
</div>
`;
